v0.14:

o Quiet warnings on Python 2.6.

o Now strips whitespace from NZB data, fixes slow downloads on some
  servers

o Fixed hellanzb recursively sending NNTP GROUP commands with a group
  value with extra whitespace

o Fixed download rate > 0 after downloads were finished (broken in
  0.12)

o Fixed rar password support (-P option)

o .cbr files are no longer treated as normal rars (extracted)

o Fixed defunct post processor processes on Solaris (Thanks andy at
  stormsail)

o Fixed a stall towards the end of a download situation when using
multiple servers pools:

When one server pool couldn't establish any connections to the server
and had queued segments particular to that pool (either during
automatic failover or due to being a fill server), and the other
server pools finished their queues, the download would mistakenly be
considered 'finished'. However decoding would never finish, causing
the stall.

o New remote call: log
  (From hellanzb.py --help)

  log logLvl logMsg     Add the specified message to the HellaNZB
                        logfile. LogLvl should be INFO, WARNING, or
                        ERROR.

  (Patch by ashleywbone)

o hellanzb now looks for the hellanzb.conf file in the following
  places/order:

  local paths: ./, ./etc/, or ~/.hellanzb/
  system paths: sys.prefix, /etc, /etc/hellanzb

o Report SAXException information when an invalid NZB could not be
  parsed (noticed by TU)

o Fixed a potential lockup with multiple defineServers that occurs
  when an article does not exist on one server and failed the CRC
  check on another server (thanks jon at sd - 6, others)

o Added optional support for the optcomplete library


v0.13:

o Can now optionally store encoded article segments in memory,
  instead of disk. This can improve performance and CPU usage in
  some cases. Set CACHE_LIMIT to a non zero value to enable.
  
  Hellanzb.CACHE_LIMIT = -1 # for an unlimited sized cache, or
  Hellanzb.CACHE_LIMIT = '100MB' # for a certain size
